@@ -1,5 +1,11 @@
 6.0.5
 - Bugfix: Do not trim quotes from the caller finder result.
+- Bugfix: Do not add strings to the recursion hive that were not
+  analysed because they were internal callables.
+- Bugfix: Do not add the internal array of an ArrayObject to the
+  list of public undeclared properties.
+- Bugfix: Prevent a fatal when analysing a class with broken
+  attributes.
 
 6.0.4
 - Updated to PHP 8.5.
